// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests to render RouteResponse should success rendered 1`] = `
Object {
  "card": Object {
    "log_id": "route_response",
    "states": Array [
      Object {
        "div": Object {
          "height": Object {
            "type": "match_parent",
            "weight": 1,
          },
          "items": Array [
            Object {
              "firstDiv": Array [
                Object {
                  "items": Array [
                    Object {
                      "height": Object {
                        "type": "fixed",
                        "value": 180,
                      },
                      "items": Array [
                        Object {
                          "alpha": 0.5,
                          "font_size": 28,
                          "font_weight": "medium",
                          "line_height": 36,
                          "margins": Object {
                            "bottom": 12,
                          },
                          "text": "Откуда: улица Раменки, 11к2",
                          "text_color": "#fff",
                          "type": "text",
                        },
                        Object {
                          "font_size": 28,
                          "font_weight": "medium",
                          "line_height": 36,
                          "text": "Куда: Перекрёсток",
                          "text_color": "#fff",
                          "type": "text",
                        },
                      ],
                      "paddings": Object {
                        "bottom": 48,
                        "left": 48,
                        "right": 48,
                        "top": 48,
                      },
                      "type": "container",
                    },
                    Object {
                      "div_id": "route_buttons",
                      "states": Array [
                        Object {
                          "div": Object {
                            "items": Array [
                              Object {
                                "background": Array [
                                  Object {
                                    "color": "#0DE6EEF9",
                                    "type": "solid",
                                  },
                                ],
                                "content_alignment_vertical": "center",
                                "height": Object {
                                  "type": "fixed",
                                  "value": 224,
                                },
                                "id": "active_item",
                                "items": Array [
                                  Object {
                                    "background": Array [
                                      Object {
                                        "color": "#fff",
                                        "type": "solid",
                                      },
                                    ],
                                    "border": Object {
                                      "corners_radius": Object {
                                        "bottom-right": 6,
                                        "top-right": 6,
                                      },
                                    },
                                    "delimiter_style": Object {
                                      "color": "#0fff",
                                      "orientation": "vertical",
                                    },
                                    "height": Object {
                                      "type": "match_parent",
                                      "weight": 1,
                                    },
                                    "type": "separator",
                                    "width": Object {
                                      "type": "fixed",
                                      "value": 6,
                                    },
                                  },
                                ],
                                "margins": Object {
                                  "top": 0,
                                },
                                "orientation": "horizontal",
                                "transition_change": Object {
                                  "duration": 500,
                                  "type": "change_bounds",
                                },
                                "type": "container",
                              },
                              Object {
                                "items": Array [
                                  Object {
                                    "actions": Array [],
                                    "alpha": 1,
                                    "content_alignment_vertical": "center",
                                    "height": Object {
                                      "type": "fixed",
                                      "value": 224,
                                    },
                                    "id": "2active",
                                    "items": Array [
                                      Object {
                                        "id": "2_element_active",
                                        "items": Array [
                                          Object {
                                            "content_alignment_vertical": "center",
                                            "items": Array [
                                              Object {
                                                "content_alignment_horizontal": "center",
                                                "content_alignment_vertical": "center",
                                                "height": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                                "items": Array [
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/icon_bg.png",
                                                    "tint_color": "#fff",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                  },
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/pedestrian.png",
                                                    "tint_color": "#717173",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                  },
                                                ],
                                                "margins": Object {
                                                  "right": 24,
                                                },
                                                "orientation": "overlap",
                                                "transition_change": Object {
                                                  "duration": 500,
                                                  "type": "change_bounds",
                                                },
                                                "type": "container",
                                                "width": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                              },
                                              Object {
                                                "font_size": 64,
                                                "font_weight": "medium",
                                                "id": "2remote_item_div_title",
                                                "line_height": 76,
                                                "text": "5 мин.",
                                                "text_color": "#fff",
                                                "type": "text",
                                              },
                                            ],
                                            "orientation": "horizontal",
                                            "type": "container",
                                          },
                                          Object {
                                            "font_size": 28,
                                            "font_weight": "medium",
                                            "id": "2remote_item_div_content",
                                            "line_height": 36,
                                            "text": "Пройти 430 м пешком",
                                            "text_color": "#fff",
                                            "type": "text",
                                          },
                                        ],
                                        "paddings": Object {
                                          "bottom": 44,
                                          "left": 48,
                                          "right": 117,
                                          "top": 44,
                                        },
                                        "type": "container",
                                        "width": Object {
                                          "type": "match_parent",
                                          "weight": 1,
                                        },
                                      },
                                    ],
                                    "orientation": "horizontal",
                                    "transition_in": Object {
                                      "alpha": 0.5,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "transition_out": Object {
                                      "alpha": 0.5,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "type": "container",
                                  },
                                  Object {
                                    "actions": Array [
                                      Object {
                                        "log_id": "Change active route item to 1",
                                        "url": "div-action://set_variable?name=buttonList_change_routes&value=1",
                                      },
                                    ],
                                    "alpha": 0.5,
                                    "content_alignment_vertical": "center",
                                    "height": Object {
                                      "type": "fixed",
                                      "value": 224,
                                    },
                                    "id": "0not_active",
                                    "items": Array [
                                      Object {
                                        "id": "0_element_",
                                        "items": Array [
                                          Object {
                                            "content_alignment_vertical": "center",
                                            "items": Array [
                                              Object {
                                                "content_alignment_horizontal": "center",
                                                "content_alignment_vertical": "center",
                                                "height": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                                "items": Array [
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/icon_bg.png",
                                                    "tint_color": "#fff",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                  },
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/car.png",
                                                    "tint_color": "#717173",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                  },
                                                ],
                                                "margins": Object {
                                                  "right": 24,
                                                },
                                                "orientation": "overlap",
                                                "transition_change": Object {
                                                  "duration": 500,
                                                  "type": "change_bounds",
                                                },
                                                "type": "container",
                                                "width": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                              },
                                              Object {
                                                "font_size": 64,
                                                "font_weight": "medium",
                                                "id": "0remote_item_div_title",
                                                "line_height": 76,
                                                "text": "4 мин.",
                                                "text_color": "#fff",
                                                "type": "text",
                                              },
                                            ],
                                            "orientation": "horizontal",
                                            "type": "container",
                                          },
                                          Object {
                                            "font_size": 28,
                                            "font_weight": "medium",
                                            "id": "0remote_item_div_content",
                                            "line_height": 36,
                                            "text": "На машине 510 м",
                                            "text_color": "#fff",
                                            "type": "text",
                                          },
                                        ],
                                        "paddings": Object {
                                          "bottom": 44,
                                          "left": 48,
                                          "right": 117,
                                          "top": 44,
                                        },
                                        "type": "container",
                                        "width": Object {
                                          "type": "match_parent",
                                          "weight": 1,
                                        },
                                      },
                                    ],
                                    "orientation": "horizontal",
                                    "transition_in": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "transition_out": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "type": "container",
                                  },
                                  Object {
                                    "actions": Array [
                                      Object {
                                        "log_id": "Change active route item to 2",
                                        "url": "div-action://set_variable?name=buttonList_change_routes&value=2",
                                      },
                                    ],
                                    "alpha": 0.5,
                                    "content_alignment_vertical": "center",
                                    "height": Object {
                                      "type": "fixed",
                                      "value": 224,
                                    },
                                    "id": "1not_active",
                                    "items": Array [
                                      Object {
                                        "id": "1_element_",
                                        "items": Array [
                                          Object {
                                            "content_alignment_vertical": "center",
                                            "items": Array [
                                              Object {
                                                "content_alignment_horizontal": "center",
                                                "content_alignment_vertical": "center",
                                                "height": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                                "items": Array [
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/icon_bg.png",
                                                    "tint_color": "#fff",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                  },
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/bus.png",
                                                    "tint_color": "#717173",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                  },
                                                ],
                                                "margins": Object {
                                                  "right": 24,
                                                },
                                                "orientation": "overlap",
                                                "transition_change": Object {
                                                  "duration": 500,
                                                  "type": "change_bounds",
                                                },
                                                "type": "container",
                                                "width": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                              },
                                              Object {
                                                "font_size": 64,
                                                "font_weight": "medium",
                                                "id": "1remote_item_div_title",
                                                "line_height": 76,
                                                "text": "5 мин.",
                                                "text_color": "#fff",
                                                "type": "text",
                                              },
                                            ],
                                            "orientation": "horizontal",
                                            "type": "container",
                                          },
                                          Object {
                                            "font_size": 28,
                                            "font_weight": "medium",
                                            "id": "1remote_item_div_content",
                                            "line_height": 36,
                                            "text": "На транспорте 430 м",
                                            "text_color": "#fff",
                                            "type": "text",
                                          },
                                        ],
                                        "paddings": Object {
                                          "bottom": 44,
                                          "left": 48,
                                          "right": 117,
                                          "top": 44,
                                        },
                                        "type": "container",
                                        "width": Object {
                                          "type": "match_parent",
                                          "weight": 1,
                                        },
                                      },
                                    ],
                                    "orientation": "horizontal",
                                    "transition_in": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "transition_out": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "type": "container",
                                  },
                                ],
                                "type": "container",
                              },
                            ],
                            "orientation": "overlap",
                            "type": "container",
                          },
                          "state_id": "active_0",
                        },
                        Object {
                          "div": Object {
                            "items": Array [
                              Object {
                                "background": Array [
                                  Object {
                                    "color": "#0DE6EEF9",
                                    "type": "solid",
                                  },
                                ],
                                "content_alignment_vertical": "center",
                                "height": Object {
                                  "type": "fixed",
                                  "value": 224,
                                },
                                "id": "active_item",
                                "items": Array [
                                  Object {
                                    "background": Array [
                                      Object {
                                        "color": "#fff",
                                        "type": "solid",
                                      },
                                    ],
                                    "border": Object {
                                      "corners_radius": Object {
                                        "bottom-right": 6,
                                        "top-right": 6,
                                      },
                                    },
                                    "delimiter_style": Object {
                                      "color": "#0fff",
                                      "orientation": "vertical",
                                    },
                                    "height": Object {
                                      "type": "match_parent",
                                      "weight": 1,
                                    },
                                    "type": "separator",
                                    "width": Object {
                                      "type": "fixed",
                                      "value": 6,
                                    },
                                  },
                                ],
                                "margins": Object {
                                  "top": 224,
                                },
                                "orientation": "horizontal",
                                "transition_change": Object {
                                  "duration": 500,
                                  "type": "change_bounds",
                                },
                                "type": "container",
                              },
                              Object {
                                "items": Array [
                                  Object {
                                    "actions": Array [
                                      Object {
                                        "log_id": "Change active route item to 0",
                                        "url": "div-action://set_variable?name=buttonList_change_routes&value=0",
                                      },
                                    ],
                                    "alpha": 0.5,
                                    "content_alignment_vertical": "center",
                                    "height": Object {
                                      "type": "fixed",
                                      "value": 224,
                                    },
                                    "id": "2not_active",
                                    "items": Array [
                                      Object {
                                        "id": "2_element_",
                                        "items": Array [
                                          Object {
                                            "content_alignment_vertical": "center",
                                            "items": Array [
                                              Object {
                                                "content_alignment_horizontal": "center",
                                                "content_alignment_vertical": "center",
                                                "height": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                                "items": Array [
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/icon_bg.png",
                                                    "tint_color": "#fff",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                  },
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/pedestrian.png",
                                                    "tint_color": "#717173",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                  },
                                                ],
                                                "margins": Object {
                                                  "right": 24,
                                                },
                                                "orientation": "overlap",
                                                "transition_change": Object {
                                                  "duration": 500,
                                                  "type": "change_bounds",
                                                },
                                                "type": "container",
                                                "width": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                              },
                                              Object {
                                                "font_size": 64,
                                                "font_weight": "medium",
                                                "id": "2remote_item_div_title",
                                                "line_height": 76,
                                                "text": "5 мин.",
                                                "text_color": "#fff",
                                                "type": "text",
                                              },
                                            ],
                                            "orientation": "horizontal",
                                            "type": "container",
                                          },
                                          Object {
                                            "font_size": 28,
                                            "font_weight": "medium",
                                            "id": "2remote_item_div_content",
                                            "line_height": 36,
                                            "text": "Пройти 430 м пешком",
                                            "text_color": "#fff",
                                            "type": "text",
                                          },
                                        ],
                                        "paddings": Object {
                                          "bottom": 44,
                                          "left": 48,
                                          "right": 117,
                                          "top": 44,
                                        },
                                        "type": "container",
                                        "width": Object {
                                          "type": "match_parent",
                                          "weight": 1,
                                        },
                                      },
                                    ],
                                    "orientation": "horizontal",
                                    "transition_in": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "transition_out": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "type": "container",
                                  },
                                  Object {
                                    "actions": Array [],
                                    "alpha": 1,
                                    "content_alignment_vertical": "center",
                                    "height": Object {
                                      "type": "fixed",
                                      "value": 224,
                                    },
                                    "id": "0active",
                                    "items": Array [
                                      Object {
                                        "id": "0_element_active",
                                        "items": Array [
                                          Object {
                                            "content_alignment_vertical": "center",
                                            "items": Array [
                                              Object {
                                                "content_alignment_horizontal": "center",
                                                "content_alignment_vertical": "center",
                                                "height": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                                "items": Array [
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/icon_bg.png",
                                                    "tint_color": "#fff",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                  },
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/car.png",
                                                    "tint_color": "#717173",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                  },
                                                ],
                                                "margins": Object {
                                                  "right": 24,
                                                },
                                                "orientation": "overlap",
                                                "transition_change": Object {
                                                  "duration": 500,
                                                  "type": "change_bounds",
                                                },
                                                "type": "container",
                                                "width": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                              },
                                              Object {
                                                "font_size": 64,
                                                "font_weight": "medium",
                                                "id": "0remote_item_div_title",
                                                "line_height": 76,
                                                "text": "4 мин.",
                                                "text_color": "#fff",
                                                "type": "text",
                                              },
                                            ],
                                            "orientation": "horizontal",
                                            "type": "container",
                                          },
                                          Object {
                                            "font_size": 28,
                                            "font_weight": "medium",
                                            "id": "0remote_item_div_content",
                                            "line_height": 36,
                                            "text": "На машине 510 м",
                                            "text_color": "#fff",
                                            "type": "text",
                                          },
                                        ],
                                        "paddings": Object {
                                          "bottom": 44,
                                          "left": 48,
                                          "right": 117,
                                          "top": 44,
                                        },
                                        "type": "container",
                                        "width": Object {
                                          "type": "match_parent",
                                          "weight": 1,
                                        },
                                      },
                                    ],
                                    "orientation": "horizontal",
                                    "transition_in": Object {
                                      "alpha": 0.5,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "transition_out": Object {
                                      "alpha": 0.5,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "type": "container",
                                  },
                                  Object {
                                    "actions": Array [
                                      Object {
                                        "log_id": "Change active route item to 2",
                                        "url": "div-action://set_variable?name=buttonList_change_routes&value=2",
                                      },
                                    ],
                                    "alpha": 0.5,
                                    "content_alignment_vertical": "center",
                                    "height": Object {
                                      "type": "fixed",
                                      "value": 224,
                                    },
                                    "id": "1not_active",
                                    "items": Array [
                                      Object {
                                        "id": "1_element_",
                                        "items": Array [
                                          Object {
                                            "content_alignment_vertical": "center",
                                            "items": Array [
                                              Object {
                                                "content_alignment_horizontal": "center",
                                                "content_alignment_vertical": "center",
                                                "height": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                                "items": Array [
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/icon_bg.png",
                                                    "tint_color": "#fff",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                  },
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/bus.png",
                                                    "tint_color": "#717173",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                  },
                                                ],
                                                "margins": Object {
                                                  "right": 24,
                                                },
                                                "orientation": "overlap",
                                                "transition_change": Object {
                                                  "duration": 500,
                                                  "type": "change_bounds",
                                                },
                                                "type": "container",
                                                "width": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                              },
                                              Object {
                                                "font_size": 64,
                                                "font_weight": "medium",
                                                "id": "1remote_item_div_title",
                                                "line_height": 76,
                                                "text": "5 мин.",
                                                "text_color": "#fff",
                                                "type": "text",
                                              },
                                            ],
                                            "orientation": "horizontal",
                                            "type": "container",
                                          },
                                          Object {
                                            "font_size": 28,
                                            "font_weight": "medium",
                                            "id": "1remote_item_div_content",
                                            "line_height": 36,
                                            "text": "На транспорте 430 м",
                                            "text_color": "#fff",
                                            "type": "text",
                                          },
                                        ],
                                        "paddings": Object {
                                          "bottom": 44,
                                          "left": 48,
                                          "right": 117,
                                          "top": 44,
                                        },
                                        "type": "container",
                                        "width": Object {
                                          "type": "match_parent",
                                          "weight": 1,
                                        },
                                      },
                                    ],
                                    "orientation": "horizontal",
                                    "transition_in": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "transition_out": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "type": "container",
                                  },
                                ],
                                "type": "container",
                              },
                            ],
                            "orientation": "overlap",
                            "type": "container",
                          },
                          "state_id": "active_1",
                        },
                        Object {
                          "div": Object {
                            "items": Array [
                              Object {
                                "background": Array [
                                  Object {
                                    "color": "#0DE6EEF9",
                                    "type": "solid",
                                  },
                                ],
                                "content_alignment_vertical": "center",
                                "height": Object {
                                  "type": "fixed",
                                  "value": 224,
                                },
                                "id": "active_item",
                                "items": Array [
                                  Object {
                                    "background": Array [
                                      Object {
                                        "color": "#fff",
                                        "type": "solid",
                                      },
                                    ],
                                    "border": Object {
                                      "corners_radius": Object {
                                        "bottom-right": 6,
                                        "top-right": 6,
                                      },
                                    },
                                    "delimiter_style": Object {
                                      "color": "#0fff",
                                      "orientation": "vertical",
                                    },
                                    "height": Object {
                                      "type": "match_parent",
                                      "weight": 1,
                                    },
                                    "type": "separator",
                                    "width": Object {
                                      "type": "fixed",
                                      "value": 6,
                                    },
                                  },
                                ],
                                "margins": Object {
                                  "top": 448,
                                },
                                "orientation": "horizontal",
                                "transition_change": Object {
                                  "duration": 500,
                                  "type": "change_bounds",
                                },
                                "type": "container",
                              },
                              Object {
                                "items": Array [
                                  Object {
                                    "actions": Array [
                                      Object {
                                        "log_id": "Change active route item to 0",
                                        "url": "div-action://set_variable?name=buttonList_change_routes&value=0",
                                      },
                                    ],
                                    "alpha": 0.5,
                                    "content_alignment_vertical": "center",
                                    "height": Object {
                                      "type": "fixed",
                                      "value": 224,
                                    },
                                    "id": "2not_active",
                                    "items": Array [
                                      Object {
                                        "id": "2_element_",
                                        "items": Array [
                                          Object {
                                            "content_alignment_vertical": "center",
                                            "items": Array [
                                              Object {
                                                "content_alignment_horizontal": "center",
                                                "content_alignment_vertical": "center",
                                                "height": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                                "items": Array [
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/icon_bg.png",
                                                    "tint_color": "#fff",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                  },
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/pedestrian.png",
                                                    "tint_color": "#717173",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                  },
                                                ],
                                                "margins": Object {
                                                  "right": 24,
                                                },
                                                "orientation": "overlap",
                                                "transition_change": Object {
                                                  "duration": 500,
                                                  "type": "change_bounds",
                                                },
                                                "type": "container",
                                                "width": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                              },
                                              Object {
                                                "font_size": 64,
                                                "font_weight": "medium",
                                                "id": "2remote_item_div_title",
                                                "line_height": 76,
                                                "text": "5 мин.",
                                                "text_color": "#fff",
                                                "type": "text",
                                              },
                                            ],
                                            "orientation": "horizontal",
                                            "type": "container",
                                          },
                                          Object {
                                            "font_size": 28,
                                            "font_weight": "medium",
                                            "id": "2remote_item_div_content",
                                            "line_height": 36,
                                            "text": "Пройти 430 м пешком",
                                            "text_color": "#fff",
                                            "type": "text",
                                          },
                                        ],
                                        "paddings": Object {
                                          "bottom": 44,
                                          "left": 48,
                                          "right": 117,
                                          "top": 44,
                                        },
                                        "type": "container",
                                        "width": Object {
                                          "type": "match_parent",
                                          "weight": 1,
                                        },
                                      },
                                    ],
                                    "orientation": "horizontal",
                                    "transition_in": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "transition_out": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "type": "container",
                                  },
                                  Object {
                                    "actions": Array [
                                      Object {
                                        "log_id": "Change active route item to 1",
                                        "url": "div-action://set_variable?name=buttonList_change_routes&value=1",
                                      },
                                    ],
                                    "alpha": 0.5,
                                    "content_alignment_vertical": "center",
                                    "height": Object {
                                      "type": "fixed",
                                      "value": 224,
                                    },
                                    "id": "0not_active",
                                    "items": Array [
                                      Object {
                                        "id": "0_element_",
                                        "items": Array [
                                          Object {
                                            "content_alignment_vertical": "center",
                                            "items": Array [
                                              Object {
                                                "content_alignment_horizontal": "center",
                                                "content_alignment_vertical": "center",
                                                "height": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                                "items": Array [
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/icon_bg.png",
                                                    "tint_color": "#fff",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                  },
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/car.png",
                                                    "tint_color": "#717173",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                  },
                                                ],
                                                "margins": Object {
                                                  "right": 24,
                                                },
                                                "orientation": "overlap",
                                                "transition_change": Object {
                                                  "duration": 500,
                                                  "type": "change_bounds",
                                                },
                                                "type": "container",
                                                "width": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                              },
                                              Object {
                                                "font_size": 64,
                                                "font_weight": "medium",
                                                "id": "0remote_item_div_title",
                                                "line_height": 76,
                                                "text": "4 мин.",
                                                "text_color": "#fff",
                                                "type": "text",
                                              },
                                            ],
                                            "orientation": "horizontal",
                                            "type": "container",
                                          },
                                          Object {
                                            "font_size": 28,
                                            "font_weight": "medium",
                                            "id": "0remote_item_div_content",
                                            "line_height": 36,
                                            "text": "На машине 510 м",
                                            "text_color": "#fff",
                                            "type": "text",
                                          },
                                        ],
                                        "paddings": Object {
                                          "bottom": 44,
                                          "left": 48,
                                          "right": 117,
                                          "top": 44,
                                        },
                                        "type": "container",
                                        "width": Object {
                                          "type": "match_parent",
                                          "weight": 1,
                                        },
                                      },
                                    ],
                                    "orientation": "horizontal",
                                    "transition_in": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "transition_out": Object {
                                      "alpha": 1,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "type": "container",
                                  },
                                  Object {
                                    "actions": Array [],
                                    "alpha": 1,
                                    "content_alignment_vertical": "center",
                                    "height": Object {
                                      "type": "fixed",
                                      "value": 224,
                                    },
                                    "id": "1active",
                                    "items": Array [
                                      Object {
                                        "id": "1_element_active",
                                        "items": Array [
                                          Object {
                                            "content_alignment_vertical": "center",
                                            "items": Array [
                                              Object {
                                                "content_alignment_horizontal": "center",
                                                "content_alignment_vertical": "center",
                                                "height": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                                "items": Array [
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/icon_bg.png",
                                                    "tint_color": "#fff",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 64,
                                                    },
                                                  },
                                                  Object {
                                                    "height": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                    "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/route_response/bus.png",
                                                    "tint_color": "#717173",
                                                    "type": "image",
                                                    "width": Object {
                                                      "type": "fixed",
                                                      "value": 38,
                                                    },
                                                  },
                                                ],
                                                "margins": Object {
                                                  "right": 24,
                                                },
                                                "orientation": "overlap",
                                                "transition_change": Object {
                                                  "duration": 500,
                                                  "type": "change_bounds",
                                                },
                                                "type": "container",
                                                "width": Object {
                                                  "type": "fixed",
                                                  "value": 64,
                                                },
                                              },
                                              Object {
                                                "font_size": 64,
                                                "font_weight": "medium",
                                                "id": "1remote_item_div_title",
                                                "line_height": 76,
                                                "text": "5 мин.",
                                                "text_color": "#fff",
                                                "type": "text",
                                              },
                                            ],
                                            "orientation": "horizontal",
                                            "type": "container",
                                          },
                                          Object {
                                            "font_size": 28,
                                            "font_weight": "medium",
                                            "id": "1remote_item_div_content",
                                            "line_height": 36,
                                            "text": "На транспорте 430 м",
                                            "text_color": "#fff",
                                            "type": "text",
                                          },
                                        ],
                                        "paddings": Object {
                                          "bottom": 44,
                                          "left": 48,
                                          "right": 117,
                                          "top": 44,
                                        },
                                        "type": "container",
                                        "width": Object {
                                          "type": "match_parent",
                                          "weight": 1,
                                        },
                                      },
                                    ],
                                    "orientation": "horizontal",
                                    "transition_in": Object {
                                      "alpha": 0.5,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "transition_out": Object {
                                      "alpha": 0.5,
                                      "duration": 500,
                                      "interpolator": "ease_in_out",
                                      "type": "fade",
                                    },
                                    "type": "container",
                                  },
                                ],
                                "type": "container",
                              },
                            ],
                            "orientation": "overlap",
                            "type": "container",
                          },
                          "state_id": "active_2",
                        },
                      ],
                      "transition_animation_selector": "any_change",
                      "type": "state",
                    },
                  ],
                  "type": "container",
                },
              ],
              "mainColor": "#1a201b",
              "mainColor1": "#2b362d",
              "secondDiv": Array [
                Object {
                  "default_state_id": "route_map_0",
                  "div_id": "route_map",
                  "height": Object {
                    "type": "match_parent",
                    "weight": 1,
                  },
                  "states": Array [
                    Object {
                      "div": Object {
                        "height": Object {
                          "type": "match_parent",
                          "weight": 1,
                        },
                        "image_url": "https://static-maps.yandex.ru/1.x/?l=map&size=681%2C851&scale=1&lang=ru_RU&bbox=37.562312793000004%2C55.72581983405496%7E37.58967786699998%2C55.73424949614372&cr=0&lg=0&pt=37.58830525%2C55.73385747%2Cya_ru%7E37.56355666%2C55.72620304%2Chome&pl=c%3A8822DDC0%2Cw%3A5%2C37.58830525%2C55.73385747%2C37.587728%2C55.733369%2C37.587178%2C55.733559%2C37.573668%2C55.729508%2C37.572045%2C55.730159%2C37.568386%2C55.728137%2C37.564088%2C55.726981%2C37.56355666%2C55.72620304&api_key=SECRET_MAPS_API_KEY&theme=dark&signature=bU4q_iUUutViZWmej_UrzPhHemKHCCmDSNIVXhAill8%3D",
                        "scale": "fill",
                        "type": "image",
                        "width": Object {
                          "type": "match_parent",
                          "weight": 1,
                        },
                      },
                      "state_id": "route_map_0",
                    },
                    Object {
                      "div": Object {
                        "height": Object {
                          "type": "match_parent",
                          "weight": 1,
                        },
                        "image_url": "https://static-maps.yandex.ru/1.x/?l=map%2Ctrf&size=681%2C851&scale=1&lang=ru_RU&bbox=37.56240109999998%2C55.72583787767431%7E37.589722900000005%2C55.734162895646364&cr=0&lg=0&pt=37.58830525%2C55.73385747%2Cya_ru%7E37.56355666%2C55.72620304%2Chome&pl=c%3A8822DDC0%2Cw%3A5%2C37.588408%2C55.733785%2C37.587688%2C55.733296%2C37.587195%2C55.733621%2C37.578457%2C55.731047%2C37.576358%2C55.732903%2C37.568431%2C55.728238%2C37.563643%2C55.726947%2C37.563807%2C55.726216&api_key=SECRET_MAPS_API_KEY&theme=dark&signature=eeYF9vFegvHYybvhIAGZ2FWoKjpwJYsDzuKiROrv0O4%3D",
                        "scale": "fill",
                        "type": "image",
                        "width": Object {
                          "type": "match_parent",
                          "weight": 1,
                        },
                      },
                      "state_id": "route_map_1",
                    },
                    Object {
                      "div": Object {
                        "height": Object {
                          "type": "match_parent",
                          "weight": 1,
                        },
                        "image_url": "https://static-maps.yandex.ru/1.x/?l=map%2Ctrf&size=681%2C851&scale=1&lang=ru_RU&bbox=37.56158594199377%2C55.72270111661723%7E37.59628121813083%2C55.73644624141723&cr=0&lg=0&pt=37.58830525%2C55.73385747%2Cya_ru%7E37.56355666%2C55.72620304%2Chome&pl=c%3A8822DDC0%2Cw%3A5%2C37.58830525%2C55.73385747%2C37.59046%2C55.734271%2C37.592003%2C55.733694%2C37.594704%2C55.735818%2C37.588735%2C55.731252%2C37.57677%2C55.725928%2C37.564124%2C55.723326%2C37.565752%2C55.723814%2C37.563163%2C55.725309%2C37.56355666%2C55.72620304&api_key=SECRET_MAPS_API_KEY&theme=dark&signature=-wVkbeq-Cg2uPcK24d8Ih7EwhVgHfNBDZSNfN40w3Og%3D",
                        "scale": "fill",
                        "type": "image",
                        "width": Object {
                          "type": "match_parent",
                          "weight": 1,
                        },
                      },
                      "state_id": "route_map_2",
                    },
                  ],
                  "type": "state",
                  "width": Object {
                    "type": "match_parent",
                    "weight": 1,
                  },
                },
              ],
              "type": "dual_screen",
            },
            Object {
              "alignment_horizontal": "right",
              "alignment_vertical": "top",
              "items": Array [
                Object {
                  "actions": Array [
                    Object {
                      "log_id": "close_fullscreen",
                      "url": "centaur://local_command?local_commands=[%7B%22command%22%3A%22close_layer%22%2C%22layer%22%3A%22DIALOG%22%2C%22stop_conversation%22%3Atrue%7D]",
                    },
                  ],
                  "alignment_horizontal": "right",
                  "background": Array [
                    Object {
                      "color": "#4c5e4f",
                      "type": "solid",
                    },
                  ],
                  "border": Object {
                    "corner_radius": 100,
                  },
                  "height": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                  "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/close_wt_border.png",
                  "margins": Object {
                    "right": 36,
                    "top": 36,
                  },
                  "paddings": Object {
                    "bottom": 22,
                    "left": 22,
                    "right": 22,
                    "top": 22,
                  },
                  "preload_required": 1,
                  "scale": "fill",
                  "type": "image",
                  "width": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                },
              ],
              "type": "container",
            },
          ],
          "orientation": "overlap",
          "type": "container",
          "width": Object {
            "type": "match_parent",
            "weight": 1,
          },
        },
        "state_id": 0,
      },
    ],
    "transition_animation_selector": "any_change",
    "variable_triggers": Array [
      Object {
        "actions": Array [
          Object {
            "log_id": "set active route item to 0in_dual_screen_horizontal",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/horizontal/route_buttons/active_0&temporary=false",
          },
          Object {
            "log_id": "set active route item to 0in_dual_screen_vertical",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/vertical/route_buttons/active_0&temporary=false",
          },
          Object {
            "log_id": "set route_map 0 to activein_dual_screen_horizontal",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/horizontal/route_map/route_map_0&temporary=false",
          },
          Object {
            "log_id": "set route_map 0 to activein_dual_screen_vertical",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/vertical/route_map/route_map_0&temporary=false",
          },
        ],
        "condition": "@{buttonList_change_routes == 0.0}",
      },
      Object {
        "actions": Array [
          Object {
            "log_id": "set active route item to 1in_dual_screen_horizontal",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/horizontal/route_buttons/active_1&temporary=false",
          },
          Object {
            "log_id": "set active route item to 1in_dual_screen_vertical",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/vertical/route_buttons/active_1&temporary=false",
          },
          Object {
            "log_id": "set route_map 1 to activein_dual_screen_horizontal",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/horizontal/route_map/route_map_1&temporary=false",
          },
          Object {
            "log_id": "set route_map 1 to activein_dual_screen_vertical",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/vertical/route_map/route_map_1&temporary=false",
          },
        ],
        "condition": "@{buttonList_change_routes == 1.0}",
      },
      Object {
        "actions": Array [
          Object {
            "log_id": "set active route item to 2in_dual_screen_horizontal",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/horizontal/route_buttons/active_2&temporary=false",
          },
          Object {
            "log_id": "set active route item to 2in_dual_screen_vertical",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/vertical/route_buttons/active_2&temporary=false",
          },
          Object {
            "log_id": "set route_map 2 to activein_dual_screen_horizontal",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/horizontal/route_map/route_map_2&temporary=false",
          },
          Object {
            "log_id": "set route_map 2 to activein_dual_screen_vertical",
            "payload": Object {},
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/vertical/route_map/route_map_2&temporary=false",
          },
        ],
        "condition": "@{buttonList_change_routes == 2.0}",
      },
      Object {
        "actions": Array [
          Object {
            "log_id": "orientation_horizontal",
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/vertical&temporary=false",
          },
        ],
        "condition": "@{isPortrait}",
      },
      Object {
        "actions": Array [
          Object {
            "log_id": "orientation_vertical",
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/horizontal&temporary=false",
          },
        ],
        "condition": "@{!isPortrait}",
      },
    ],
    "variables": Array [
      Object {
        "name": "buttonList_change_routes",
        "type": "number",
        "value": 0,
      },
    ],
  },
  "templates": Object {
    "dual_screen": Object {
      "default_state_id": "horizontal",
      "div_id": "dual_screen_orientation",
      "height": Object {
        "type": "match_parent",
        "weight": 1,
      },
      "states": Array [
        Object {
          "div": Object {
            "orientation": "horizontal",
            "type": "dual_screen_with_orientation",
          },
          "state_id": "horizontal",
        },
        Object {
          "div": Object {
            "orientation": "vertical",
            "type": "dual_screen_with_orientation",
          },
          "state_id": "vertical",
        },
      ],
      "transition_animation_selector": "any_change",
      "type": "state",
      "width": Object {
        "type": "match_parent",
        "weight": 1,
      },
    },
    "dual_screen_with_orientation": Object {
      "background": Array [
        Object {
          "$color": "mainColor",
          "type": "solid",
        },
      ],
      "height": Object {
        "type": "match_parent",
      },
      "items": Array [
        Object {
          "$items": "firstDiv",
          "height": Object {
            "type": "match_parent",
          },
          "type": "container",
          "width": Object {
            "type": "match_parent",
          },
        },
        Object {
          "$items": "secondDiv",
          "background": Array [
            Object {
              "$color": "mainColor1",
              "type": "solid",
            },
          ],
          "height": Object {
            "type": "match_parent",
          },
          "type": "container",
          "width": Object {
            "type": "match_parent",
          },
        },
      ],
      "type": "container",
      "width": Object {
        "type": "match_parent",
      },
    },
  },
}
`;

exports[`Tests to render RouteResponse should success rendered with empty routes 1`] = `
Object {
  "card": Object {
    "log_id": "route_response",
    "states": Array [
      Object {
        "div": Object {
          "height": Object {
            "type": "match_parent",
            "weight": 1,
          },
          "items": Array [
            Object {
              "firstDiv": Array [
                Object {
                  "height": Object {
                    "type": "match_parent",
                    "weight": 1,
                  },
                  "items": Array [
                    Object {
                      "content_alignment_vertical": "center",
                      "items": Array [
                        Object {
                          "delimiter_style": Object {
                            "color": "#0fff",
                          },
                          "type": "separator",
                        },
                      ],
                      "orientation": "horizontal",
                      "type": "container",
                      "width": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                    },
                    Object {
                      "content_alignment_vertical": "center",
                      "height": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                      "items": Array [
                        Object {
                          "font_size": 28,
                          "font_weight": "medium",
                          "line_height": 36,
                          "text": "Не удалось построить маршрут",
                          "text_color": "#fff",
                          "type": "text",
                        },
                      ],
                      "margins": Object {
                        "right": 12,
                      },
                      "type": "container",
                    },
                    Object {
                      "content_alignment_vertical": "bottom",
                      "items": Array [
                        Object {
                          "delimiter_style": Object {
                            "color": "#0fff",
                          },
                          "type": "separator",
                        },
                      ],
                      "margins": Object {
                        "right": 12,
                      },
                      "type": "container",
                    },
                  ],
                  "paddings": Object {
                    "left": 48,
                    "right": 36,
                    "top": 36,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                    "weight": 1,
                  },
                },
              ],
              "mainColor": "#1a201b",
              "mainColor1": "#2b362d",
              "secondDiv": Array [
                Object {
                  "delimiter_style": Object {
                    "color": "#0fff",
                  },
                  "type": "separator",
                },
              ],
              "type": "dual_screen",
            },
            Object {
              "alignment_horizontal": "right",
              "alignment_vertical": "top",
              "items": Array [
                Object {
                  "actions": Array [
                    Object {
                      "log_id": "close_fullscreen",
                      "url": "centaur://local_command?local_commands=[%7B%22command%22%3A%22close_layer%22%2C%22layer%22%3A%22DIALOG%22%2C%22stop_conversation%22%3Atrue%7D]",
                    },
                  ],
                  "alignment_horizontal": "right",
                  "background": Array [
                    Object {
                      "color": "#1affffff",
                      "type": "solid",
                    },
                  ],
                  "border": Object {
                    "corner_radius": 20,
                  },
                  "height": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                  "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/close_wt_border.png",
                  "margins": Object {
                    "right": 36,
                    "top": 36,
                  },
                  "paddings": Object {
                    "bottom": 22,
                    "left": 22,
                    "right": 22,
                    "top": 22,
                  },
                  "preload_required": 1,
                  "scale": "fill",
                  "type": "image",
                  "width": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                },
              ],
              "type": "container",
            },
          ],
          "orientation": "overlap",
          "type": "container",
          "width": Object {
            "type": "match_parent",
            "weight": 1,
          },
        },
        "state_id": 0,
      },
    ],
    "transition_animation_selector": "any_change",
    "variable_triggers": Array [
      Object {
        "actions": Array [
          Object {
            "log_id": "orientation_horizontal",
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/vertical&temporary=false",
          },
        ],
        "condition": "@{isPortrait}",
      },
      Object {
        "actions": Array [
          Object {
            "log_id": "orientation_vertical",
            "url": "div-action://set_state?state_id=0/dual_screen_orientation/horizontal&temporary=false",
          },
        ],
        "condition": "@{!isPortrait}",
      },
    ],
    "variables": Array [],
  },
  "templates": Object {
    "dual_screen": Object {
      "default_state_id": "horizontal",
      "div_id": "dual_screen_orientation",
      "height": Object {
        "type": "match_parent",
        "weight": 1,
      },
      "states": Array [
        Object {
          "div": Object {
            "orientation": "horizontal",
            "type": "dual_screen_with_orientation",
          },
          "state_id": "horizontal",
        },
        Object {
          "div": Object {
            "orientation": "vertical",
            "type": "dual_screen_with_orientation",
          },
          "state_id": "vertical",
        },
      ],
      "transition_animation_selector": "any_change",
      "type": "state",
      "width": Object {
        "type": "match_parent",
        "weight": 1,
      },
    },
    "dual_screen_with_orientation": Object {
      "background": Array [
        Object {
          "$color": "mainColor",
          "type": "solid",
        },
      ],
      "height": Object {
        "type": "match_parent",
      },
      "items": Array [
        Object {
          "$items": "firstDiv",
          "height": Object {
            "type": "match_parent",
          },
          "type": "container",
          "width": Object {
            "type": "match_parent",
          },
        },
        Object {
          "$items": "secondDiv",
          "background": Array [
            Object {
              "$color": "mainColor1",
              "type": "solid",
            },
          ],
          "height": Object {
            "type": "match_parent",
          },
          "type": "container",
          "width": Object {
            "type": "match_parent",
          },
        },
      ],
      "type": "container",
      "width": Object {
        "type": "match_parent",
      },
    },
  },
}
`;
